fixed horizontal scroll

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -560,6 +560,7 @@ div.swiper-button{
 .section-hero-image{
     position: relative;
     padding: 0;
+    overflow: hidden;
 
     .dots{
         position: absolute;
